--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "brunch build --production",
+    "deploy": "cp ./sw.js ../priv/static/; brunch build --production",
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
